--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.9",
+    "critters": "^0.0.23",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
